[gd_scene load_steps=11 format=3 uid="uid://sfbo0v7vkcy5"]

[ext_resource type="Script" uid="uid://clsksg8t2awuw" path="res://scripts/main_menu.gd" id="1_bqqt6"]
[ext_resource type="Texture2D" uid="uid://6ltboip8yqbm" path="res://assets/mainmenubackground.png" id="1_ekxnf"]
[ext_resource type="FontFile" uid="uid://c1cpubp5x6y1l" path="res://fonts/LilitaOne-Regular.ttf" id="3_bqqt6"]
[ext_resource type="StyleBox" uid="uid://c0j65wo0rxbma" path="res://themes/menu_panel_variant_2style_box.tres" id="4_8ln24"]
[ext_resource type="Theme" uid="uid://bc463cnh1wi1g" path="res://themes/button_variant_1.tres" id="5_rtw2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bqqt6"]
bg_color = Color(0.568627, 0.568627, 0.568627, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(1, 0.733333, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.996078, 0.831373, 0.188235, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rtw2f"]
bg_color = Color(0.984314, 0.588235, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="Theme" id="Theme_tbmy8"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/constants/outline_size = 30
Button/font_sizes/font_size = 40
Button/fonts/font = ExtResource("3_bqqt6")
Button/styles/disabled = SubResource("StyleBoxFlat_bqqt6")
Button/styles/hover = SubResource("StyleBoxFlat_wu84c")
Button/styles/normal = SubResource("StyleBoxFlat_8ln24")
Button/styles/pressed = SubResource("StyleBoxFlat_rtw2f")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_bqqt6")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = -63.0
offset_right = 1280.0
offset_bottom = 790.0
texture = ExtResource("1_ekxnf")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HowToPlayButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 200.0
offset_top = 500.0
offset_right = 450.0
offset_bottom = 625.0
theme = SubResource("Theme_tbmy8")
text = "How To
Play"

[node name="PlayButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 500.0
offset_top = 500.0
offset_right = 750.0
offset_bottom = 625.0
theme = SubResource("Theme_tbmy8")
text = "PLAY
GAME"

[node name="CreditsButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 800.0
offset_top = 500.0
offset_right = 1050.0
offset_bottom = 625.0
theme = SubResource("Theme_tbmy8")
text = "Credits
"

[node name="HowToPlayOverlay" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="UI/HowToPlayOverlay"]
layout_mode = 0
offset_left = -66.0
offset_top = -83.0
offset_right = 1330.0
offset_bottom = 817.0

[node name="OverlayBackground" type="Panel" parent="UI/HowToPlayOverlay"]
layout_mode = 0
offset_left = 180.0
offset_top = 95.0
offset_right = 1072.0
offset_bottom = 581.0
theme_override_styles/panel = ExtResource("4_8ln24")

[node name="RichTextLabel" type="RichTextLabel" parent="UI/HowToPlayOverlay"]
layout_mode = 0
offset_left = 217.0
offset_top = 129.0
offset_right = 1037.0
offset_bottom = 552.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_bqqt6")
theme_override_fonts/bold_font = ExtResource("3_bqqt6")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[b]Welcome to Mole Maker![/b]

In this game you will combine atoms to make new chemical compounds for the many mole people of Moleville.

- Click the \"Periodic Table\" button at the top right to access one
- Click the \"Hint\" button at the top right if you get stuck                

Good luck!"
horizontal_alignment = 1

[node name="CloseOverlayButton" type="Button" parent="UI/HowToPlayOverlay"]
layout_mode = 0
offset_left = 590.0
offset_top = 500.0
offset_right = 660.0
offset_bottom = 540.0
theme = ExtResource("5_rtw2f")
text = "Close
"

[connection signal="pressed" from="UI/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="UI/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="UI/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="UI/HowToPlayOverlay/CloseOverlayButton" to="." method="_on_close_overlay_button_pressed"]
